releases/v0.6.80/README.md
# Screenshot Set: v0.6.80

Captured: 2026-06-09T18:45:31.316Z

| Scene | Path | Session | Viewport | Theme | Mode | File |
| --- | --- | --- | --- | --- | --- | --- |
| Tools - Email Validation status: appears valid (artvandelay) | `/email-headers` | artvandelay | desktop | light | fold | ![auth-artvandelay-tools-email-validation-status-valid-desktop-light-fold](./artvandelay/auth-artvandelay-tools-email-validation-status-valid-desktop-light-fold.png) |
| Settings - Message Statuses (artvandelay) | `/settings/replies` | artvandelay | desktop | light | fold | ![auth-artvandelay-settings-replies-desktop-light-fold](./artvandelay/auth-artvandelay-settings-replies-desktop-light-fold.png) |
| Settings - Notifications (artvandelay) | `/settings/notifications` | artvandelay | desktop | light | fold | ![auth-artvandelay-settings-notifications-desktop-light-fold](./artvandelay/auth-artvandelay-settings-notifications-desktop-light-fold.png) |
| Settings - Advanced (artvandelay) | `/settings/advanced` | artvandelay | desktop | light | fold | ![auth-artvandelay-settings-advanced-desktop-light-fold](./artvandelay/auth-artvandelay-settings-advanced-desktop-light-fold.png) |
| Onboarding - Step 1 Profile (newman) | `/onboarding?step=profile` | newman | mobile | light | fold | ![auth-newman-onboarding-profile-mobile-light-fold](./newman/auth-newman-onboarding-profile-mobile-light-fold.png) |
| Directory - Verified | `/directory` | guest | desktop | light | fold | ![guest-directory-verified-desktop-light-fold](./guest/guest-directory-verified-desktop-light-fold.png) |
| Directory - Featured Carousel | `/directory` | guest | desktop | light | fold | ![guest-directory-featured-carousel-desktop-light-fold](./guest/guest-directory-featured-carousel-desktop-light-fold.png) |
| Profile - artvandelay | `/to/artvandelay` | guest | desktop | light | fold | ![guest-profile-artvandelay-desktop-light-fold](./guest/guest-profile-artvandelay-desktop-light-fold.png) |
| Profile - artvandelay custom form | `/to/artvandelay` | guest | desktop | light | fold | ![guest-profile-artvandelay-custom-form-desktop-light-fold](./guest/guest-profile-artvandelay-custom-form-desktop-light-fold.png) |
